// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound if checked radio button 1`] = `
<vm-menu-item aria-checked="true" aria-hidden="false" aria-label="Label" class="notTouch" label="Label" role="menuitemradio" tabindex="0">
  <vm-icon href="#vime-checkmark"></vm-icon>
  Label
</vm-menu-item>
`;

exports[`should be structurally sound if expanded navigation item 1`] = `
<vm-menu-item aria-controls="menu-1" aria-expanded="true" aria-haspopup="true" aria-hidden="false" aria-label="Label" class="notTouch showDivider" label="Label" role="menuitem" tabindex="0">
  <span class="arrow left"></span>
  Label
</vm-menu-item>
`;

exports[`should be structurally sound if item has a badge 1`] = `
<vm-menu-item aria-hidden="false" aria-label="Label" class="notTouch" label="Label" role="menuitem" tabindex="0">
  Label
  <span class="spacer"></span>
  <span class="badge">
    badge
  </span>
</vm-menu-item>
`;

exports[`should be structurally sound if item has hint 1`] = `
<vm-menu-item aria-hidden="false" aria-label="Label" class="notTouch" label="Label" role="menuitem" tabindex="0">
  Label
  <span class="spacer"></span>
  <span class="hint">
    hint
  </span>
</vm-menu-item>
`;

exports[`should be structurally sound if navigation item 1`] = `
<vm-menu-item aria-controls="menu-1" aria-expanded="false" aria-haspopup="true" aria-hidden="false" aria-label="Label" class="notTouch" label="Label" role="menuitem" tabindex="0">
  Label
  <span class="spacer"></span>
  <span class="hint">
    hint
  </span>
  <span class="arrow right"></span>
</vm-menu-item>
`;

exports[`should be structurally sound if plain 1`] = `
<vm-menu-item aria-hidden="false" aria-label="Label" class="notTouch" label="Label" role="menuitem" tabindex="0">
  Label
</vm-menu-item>
`;

exports[`should be structurally sound if unchecked radio button 1`] = `
<vm-menu-item aria-checked="false" aria-hidden="false" aria-label="Label" class="notTouch" label="Label" role="menuitemradio" tabindex="0">
  <vm-icon href="#vime-checkmark"></vm-icon>
  Label
</vm-menu-item>
`;
